Enhance README with project details and run instructionsupdate start Rules
Expanded README with project overview, usage instructions, and troubleshooting tips.